--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <link rel="preload" as="image" href="/images/hero-reishi.jpg" />
   </head>
 
-  <body class="antialiased text-brand-stone bg-brand-cream">
+  <body class="antialiased text-stone bg-cream">
     <!-- Skip link -->
-    <a href="#conteudo" class="sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-4 focus:z-50 bg-white border border-brand-leaf text-brand-leaf px-4 py-2 rounded-lg">Pular para o conteúdo</a>
+    <a href="#conteudo" class="sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-4 focus:z-50 bg-white border border-leaf text-leaf px-4 py-2 rounded-lg">Pular para o conteúdo</a>
 
     <!-- Top Bar -->
-    <div class="bg-brand-stone text-white text-sm">
+    <div class="bg-stone text-white text-sm">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-2 flex items-center justify-between">
         <p aria-label="Informações de contato">Atendimento comercial: <a class="underline decoration-white/40 hover:decoration-white" href="mailto:comercial@gaiacogumelos.com.br">comercial@gaiacogumelos.com.br</a></p>
         <p class="hidden sm:block">Fornecimento B2B — Reishi desidratado e em pó</p>
@@ -47,19 +47,19 @@
         <div class="flex items-center justify-between py-4">
           <a href="#" class="flex items-center gap-3" aria-label="Página inicial — Gaia Cogumelos">
             <img src="logo.png" alt="Logotipo da Gaia Cogumelos" class="h-10 w-auto" />
-            <span class="font-semibold tracking-wide text-lg text-brand-stone">Gaia Cogumelos</span>
+            <span class="font-semibold tracking-wide text-lg text-stone">Gaia Cogumelos</span>
           </a>
 
           <nav class="hidden md:flex items-center gap-8" aria-label="Navegação primária">
-            <a href="#solucoes" class="text-sm font-medium text-brand-stone/90 hover:text-brand-leaf">Soluções</a>
-            <a href="#setores" class="text-sm font-medium text-brand-stone/90 hover:text-brand-leaf">Setores atendidos</a>
-            <a href="#sobre" class="text-sm font-medium text-brand-stone/90 hover:text-brand-leaf">Sobre</a>
-            <a href="#contato" class="text-sm font-medium text-brand-stone/90 hover:text-brand-leaf">Contato</a>
+            <a href="#solucoes" class="text-sm font-medium text-stone/90 hover:text-leaf">Soluções</a>
+            <a href="#setores" class="text-sm font-medium text-stone/90 hover:text-leaf">Setores atendidos</a>
+            <a href="#sobre" class="text-sm font-medium text-stone/90 hover:text-leaf">Sobre</a>
+            <a href="#contato" class="text-sm font-medium text-stone/90 hover:text-leaf">Contato</a>
           </nav>
 
           <div class="hidden md:flex items-center gap-3">
-            <a href="#contato" class="inline-flex items-center justify-center rounded-xl border border-brand-leaf/20 bg-white px-4 py-2 text-sm font-semibold text-brand-forest shadow-soft hover:shadow transition">Fale com o comercial</a>
-            <a href="#cotacao" class="inline-flex items-center justify-center rounded-xl bg-brand-forest px-4 py-2 text-sm font-semibold text-white hover:bg-brand-leaf shadow-soft">Solicitar cotação</a>
+            <a href="#contato" class="inline-flex items-center justify-center rounded-xl border border-leaf/20 bg-white px-4 py-2 text-sm font-semibold text-forest shadow-soft hover:shadow transition">Fale com o comercial</a>
+            <a href="#cotacao" class="inline-flex items-center justify-center rounded-xl bg-forest px-4 py-2 text-sm font-semibold text-white hover:bg-leaf shadow-soft">Solicitar cotação</a>
           </div>
 
           <button id="btnMenu" class="md:hidden p-2 rounded-lg border border-black/10" aria-label="Abrir menu">
@@ -71,18 +71,18 @@
 
     <main id="conteudo">
       <!-- Hero -->
-      <section class="relative overflow-hidden bg-gradient-to-b from-white to-brand-mint/40">
+      <section class="relative overflow-hidden bg-gradient-to-b from-white to-mint/40">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20 lg:py-28 grid lg:grid-cols-2 gap-10 items-center">
           <div>
-            <h1 class="text-3xl sm:text-4xl lg:text-5xl font-extrabold tracking-tight text-brand-stone leading-tight">
-              Matéria-prima confiável de <span class="text-brand-forest">Ganoderma lucidum</span> para sua marca
+            <h1 class="text-3xl sm:text-4xl lg:text-5xl font-extrabold tracking-tight text-stone leading-tight">
+              Matéria-prima confiável de <span class="text-forest">Ganoderma lucidum</span> para sua marca
             </h1>
-            <p class="mt-5 text-lg text-brand-stone/80 max-w-2xl">
+            <p class="mt-5 text-lg text-stone/80 max-w-2xl">
               Fornecemos <strong>Reishi desidratado e em pó</strong> com padrão de qualidade consistente, do cultivo à expedição. Parceria B2B para indústrias de suplementos, extratos e nutracêuticos.
             </p>
             <div class="mt-8 flex flex-col sm:flex-row gap-3">
-              <a href="#cotacao" class="inline-flex items-center justify-center rounded-xl bg-brand-forest px-5 py-3 text-base font-semibold text-white hover:bg-brand-leaf shadow-soft">Solicitar cotação</a>
-              <a href="#sobre" class="inline-flex items-center justify-center rounded-xl border border-brand-leaf/20 bg-white px-5 py-3 text-base font-semibold text-brand-forest hover:shadow-soft">Conheça a Gaia</a>
+              <a href="#cotacao" class="inline-flex items-center justify-center rounded-xl bg-forest px-5 py-3 text-base font-semibold text-white hover:bg-leaf shadow-soft">Solicitar cotação</a>
+              <a href="#sobre" class="inline-flex items-center justify-center rounded-xl border border-leaf/20 bg-white px-5 py-3 text-base font-semibold text-forest hover:shadow-soft">Conheça a Gaia</a>
             </div>
           </div>
           <div>
@@ -97,33 +97,33 @@
       <section id="solucoes" class="py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <header class="max-w-2xl">
-            <h2 class="text-2xl sm:text-3xl font-bold text-brand-stone">Soluções para sua cadeia de produção</h2>
-            <p class="mt-3 text-brand-stone/80">Atendemos marcas que precisam de fornecimento confiável de Reishi com especificações claras e previsibilidade de entrega.</p>
+            <h2 class="text-2xl sm:text-3xl font-bold text-stone">Soluções para sua cadeia de produção</h2>
+            <p class="mt-3 text-stone/80">Atendemos marcas que precisam de fornecimento confiável de Reishi com especificações claras e previsibilidade de entrega.</p>
           </header>
 
           <div class="mt-10 grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <article class="rounded-3xl bg-brand-mint/30 border border-black/5 shadow-soft p-6">
-              <h3 class="font-semibold text-brand-stone">Reishi desidratado (lamelas/cortes)</h3>
-              <p class="mt-2 text-sm text-brand-stone/80">Secagem controlada; umidade alvo ≤ 12%; ideal para maceração e infusões.</p>
+            <article class="rounded-3xl bg-mint/30 border border-black/5 shadow-soft p-6">
+              <h3 class="font-semibold text-stone">Reishi desidratado (lamelas/cortes)</h3>
+              <p class="mt-2 text-sm text-stone/80">Secagem controlada; umidade alvo ≤ 12%; ideal para maceração e infusões.</p>
             </article>
-            <article class="rounded-3xl bg-brand-mint/30 border border-black/5 shadow-soft p-6">
-              <h3 class="font-semibold text-brand-stone">Pó de Reishi</h3>
-              <p class="mt-2 text-sm text-brand-stone/80">Granulometria sob demanda; indicado para cápsulas, blends e chás.</p>
+            <article class="rounded-3xl bg-mint/30 border border-black/5 shadow-soft p-6">
+              <h3 class="font-semibold text-stone">Pó de Reishi</h3>
+              <p class="mt-2 text-sm text-stone/80">Granulometria sob demanda; indicado para cápsulas, blends e chás.</p>
             </article>
-            <article class="rounded-3xl bg-brand-mint/30 border border-black/5 shadow-soft p-6">
-              <h3 class="font-semibold text-brand-stone">Programação de entregas</h3>
-              <p class="mt-2 text-sm text-brand-stone/80">Contratos com volumes mensais e janela de entrega; previsibilidade para sua operação.</p>
+            <article class="rounded-3xl bg-mint/30 border border-black/5 shadow-soft p-6">
+              <h3 class="font-semibold text-stone">Programação de entregas</h3>
+              <p class="mt-2 text-sm text-stone/80">Contratos com volumes mensais e janela de entrega; previsibilidade para sua operação.</p>
             </article>
           </div>
         </div>
       </section>
 
       <!-- Setores atendidos -->
-      <section id="setores" class="py-20 bg-brand-mint/30">
+      <section id="setores" class="py-20 bg-mint/30">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <header class="max-w-2xl">
-            <h2 class="text-2xl sm:text-3xl font-bold text-brand-stone">Setores atendidos</h2>
-            <p class="mt-3 text-brand-stone/80">Parcerias com indústrias e marcas que valorizam qualidade, transparência e continuidade de fornecimento.</p>
+            <h2 class="text-2xl sm:text-3xl font-bold text-stone">Setores atendidos</h2>
+            <p class="mt-3 text-stone/80">Parcerias com indústrias e marcas que valorizam qualidade, transparência e continuidade de fornecimento.</p>
           </header>
           <div class="mt-10 grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
             <div class="rounded-2xl bg-white p-6 border border-black/5 shadow-soft">
@@ -146,22 +146,22 @@
       <section id="sobre" class="py-20  bg-white ">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 grid lg:grid-cols-2 gap-10 items-center">
           <div>
-            <h2 class="text-2xl sm:text-3xl font-bold text-brand-stone">Sobre a Gaia Cogumelos</h2>
-            <p class="mt-4 text-brand-stone/80">Produtor especializado em Ganoderma lucidum com foco em fornecimento B2B. Operação baseada em processos e relacionamentos de longo prazo com marcas que valorizam qualidade.</p>
+            <h2 class="text-2xl sm:text-3xl font-bold text-stone">Sobre a Gaia Cogumelos</h2>
+            <p class="mt-4 text-stone/80">Produtor especializado em Ganoderma lucidum com foco em fornecimento B2B. Operação baseada em processos e relacionamentos de longo prazo com marcas que valorizam qualidade.</p>
           </div>
           <div class="rounded-3xl bg-white p-6 border border-black/5 shadow-soft">
             <dl class="grid grid-cols-2 gap-4">
               <div>
-                <dt class="text-xs uppercase tracking-wider text-brand-stone/60">Cidade</dt>
-                <dd class="mt-1 font-semibold text-brand-stone">Paulínia • SP</dd>
+                <dt class="text-xs uppercase tracking-wider text-stone/60">Cidade</dt>
+                <dd class="mt-1 font-semibold text-stone">Paulínia • SP</dd>
               </div>
               <div>
-                <dt class="text-xs uppercase tracking-wider text-brand-stone/60">Foco</dt>
-                <dd class="mt-1 font-semibold text-brand-stone">B2B — matéria-prima</dd>
+                <dt class="text-xs uppercase tracking-wider text-stone/60">Foco</dt>
+                <dd class="mt-1 font-semibold text-stone">B2B — matéria-prima</dd>
               </div>
               <div>
-                <dt class="text-xs uppercase tracking-wider text-brand-stone/60">Produtos</dt>
-                <dd class="mt-1 font-semibold text-brand-stone">Reishi desidratado, pó padronizado</dd>
+                <dt class="text-xs uppercase tracking-wider text-stone/60">Produtos</dt>
+                <dd class="mt-1 font-semibold text-stone">Reishi desidratado, pó padronizado</dd>
               </div>
             </dl>
           </div>
@@ -169,39 +169,39 @@
       </section>
 
       <!-- Contato -->
-      <section id="contato" class="py-20 from-white bg-gradient-to-b to-brand-mint/30">
+      <section id="contato" class="py-20 from-white bg-gradient-to-b to-mint/30">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <div class="grid lg:grid-cols-2 gap-10">
             <div>
-              <h2 class="text-2xl sm:text-3xl font-bold text-brand-stone">Fale com o comercial</h2>
-              <p class="mt-3 text-brand-stone/80">Envie suas especificações técnicas para retorno com proposta. Resposta em 1–2 dias úteis.</p>
-              <ul class="mt-6 space-y-2 text-brand-stone/90">
+              <h2 class="text-2xl sm:text-3xl font-bold text-stone">Fale com o comercial</h2>
+              <p class="mt-3 text-stone/80">Envie suas especificações técnicas para retorno com proposta. Resposta em 1–2 dias úteis.</p>
+              <ul class="mt-6 space-y-2 text-stone/90">
                 <li><strong>E-mail:</strong> <a class="underline hover:no-underline" href="mailto:comercial@gaiacogumelos.com.br">comercial@gaiacogumelos.com.br</a></li>
                 <li><strong>Telefone:</strong> (00) 0000-0000</li>
                 <li><strong>Local:</strong> Paulínia • São Paulo</li>
               </ul>
             </div>
-            <form class="bg-brand-mint/20 rounded-3xl p-6 border border-black/5 shadow-soft" action="https://formspree.io/f/your-id" method="POST">
+            <form class="bg-mint/20 rounded-3xl p-6 border border-black/5 shadow-soft" action="https://formspree.io/f/your-id" method="POST">
               <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                 <div>
-                  <label for="nome" class="block text-sm font-medium text-brand-stone">Nome</label>
-                  <input id="nome" name="nome" required class="mt-1 w-full rounded-xl border border-black/10 bg-white px-3 py-2 focus:outline-none focus:ring-2 focus:ring-brand-leaf" />
+                  <label for="nome" class="block text-sm font-medium text-stone">Nome</label>
+                  <input id="nome" name="nome" required class="mt-1 w-full rounded-xl border border-black/10 bg-white px-3 py-2 focus:outline-none focus:ring-2 focus:ring-leaf" />
                 </div>
                 <div>
-                  <label for="empresa" class="block text-sm font-medium text-brand-stone">Empresa</label>
-                  <input id="empresa" name="empresa" required class="mt-1 w-full rounded-xl border border-black/10 bg-white px-3 py-2 focus:outline-none focus:ring-2 focus:ring-brand-leaf" />
+                  <label for="empresa" class="block text-sm font-medium text-stone">Empresa</label>
+                  <input id="empresa" name="empresa" required class="mt-1 w-full rounded-xl border border-black/10 bg-white px-3 py-2 focus:outline-none focus:ring-2 focus:ring-leaf" />
                 </div>
                 <div class="sm:col-span-2">
-                  <label for="email" class="block text-sm font-medium text-brand-stone">E-mail</label>
-                  <input id="email" type="email" name="email" required class="mt-1 w-full rounded-xl border border-black/10 bg-white px-3 py-2 focus:outline-none focus:ring-2 focus:ring-brand-leaf" />
+                  <label for="email" class="block text-sm font-medium text-stone">E-mail</label>
+                  <input id="email" type="email" name="email" required class="mt-1 w-full rounded-xl border border-black/10 bg-white px-3 py-2 focus:outline-none focus:ring-2 focus:ring-leaf" />
                 </div>
                 <div class="sm:col-span-2">
-                  <label for="mensagem" class="block text-sm font-medium text-brand-stone">Mensagem</label>
-                  <textarea id="mensagem" name="mensagem" rows="    4" required class="mt-1 w-full rounded-xl border border-black/10 bg-white px-3 py-2 focus:outline-none focus:ring-2 focus:ring-brand-leaf"></textarea>
+                  <label for="mensagem" class="block text-sm font-medium text-stone">Mensagem</label>
+                  <textarea id="mensagem" name="mensagem" rows="    4" required class="mt-1 w-full rounded-xl border border-black/10 bg-white px-3 py-2 focus:outline-none focus:ring-2 focus:ring-leaf"></textarea>
                 </div>
               </div>
               <div class="mt-4">
-                <button type="submit" class="inline-flex items-center justify-center rounded-xl bg-brand-forest px-5 py-3 text-base font-semibold text-white hover:bg-brand-leaf shadow-soft">Enviar mensagem</button>
+                <button type="submit" class="inline-flex items-center justify-center rounded-xl bg-forest px-5 py-3 text-base font-semibold text-white hover:bg-leaf shadow-soft">Enviar mensagem</button>
               </div>
             </form>
           </div>
