--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       </section>
 
       <!-- Setores atendidos -->
-      <section id="setores" class="py-20 bg-[#DFF1E7]">
+      <section id="setores" class="py-20 bg-white/30">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <header class="max-w-2xl">
             <h2 class="text-2xl sm:text-3xl font-bold text-stone">Setores atendidos</h2>
