--- a/index.html
+++ b/index.html
@@ -158,15 +158,15 @@
           </header>
 
           <div class="mt-10 grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <article class="rounded-3xl bg-mint/30 border border-black/5 shadow-soft p-6">
+            <article class="rounded-3xl bg-white border border-black/5 shadow-soft p-6">
               <h3 class="font-semibold text-stone">Reishi desidratado (lamelas/cortes)</h3>
               <p class="mt-2 text-sm text-stone/80">Secagem controlada; umidade alvo ≤ 12%; ideal para maceração e infusões.</p>
             </article>
-            <article class="rounded-3xl bg-mint/30 border border-black/5 shadow-soft p-6">
+            <article class="rounded-3xl bg-white border border-black/5 shadow-soft p-6">
               <h3 class="font-semibold text-stone">Pó de Reishi</h3>
               <p class="mt-2 text-sm text-stone/80">Granulometria sob demanda; indicado para cápsulas, blends e chás.</p>
             </article>
-            <article class="rounded-3xl bg-mint/30 border border-black/5 shadow-soft p-6">
+            <article class="rounded-3xl bg-white border border-black/5 shadow-soft p-6">
               <h3 class="font-semibold text-stone">Programação de entregas</h3>
               <p class="mt-2 text-sm text-stone/80">Contratos com volumes mensais e janela de entrega; previsibilidade para sua operação.</p>
             </article>
@@ -225,7 +225,7 @@
       </section>
 
       <!-- Contato -->
-      <section id="contato" class="py-20 bg-gradient-to-b from-white to-mint/30">
+      <section id="contato" class="py-20 bg-gradient-to-b from-white to-bg-white/30">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <div class="grid lg:grid-cols-2 gap-10">
             <div>
@@ -237,7 +237,7 @@
                 <li><strong>Local:</strong> Paulínia • São Paulo</li>
               </ul>
             </div>
-            <form class="bg-mint/20 rounded-3xl p-6 border border-black/5 shadow-soft" action="https://formspree.io/f/your-id" method="POST">
+            <form class="bg-white rounded-3xl p-6 border border-black/5 shadow-soft" action="https://formspree.io/f/your-id" method="POST">
               <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                 <div>
                   <label for="nome" class="block text-sm font-medium text-stone">Nome</label>
