--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <li><strong>Local:</strong> Bariri • São Paulo</li>
               </ul>
             </div>
-            <form class="bg-white rounded-3xl p-6 border border-black/5 shadow-soft" action="https://formspree.io/f/your-id" method="POST">
+            <form class="bg-white rounded-3xl p-6 border border-black/5 shadow-soft" id="email-form" method="POST">
               <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                 <div>
                   <label for="nome" class="block text-sm font-medium text-stone">Nome</label>
