--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' https:; connect-src 'self';" />
 
     <!-- Favicon -->
-    <link rel="icon" href="logo.png" />
-    <link rel="apple-touch-icon" href="logo.png" />
-    <link rel="shortcut icon" type="image/png" href="logo.png" />
+    <link rel="icon" href="logo.webp" />
+    <link rel="apple-touch-icon" href="logo.webp" />
+    <link rel="shortcut icon" type="image/webp" href="logo.webp" />
     
     <script type="module" src="./src/main.ts"></script>
 
-    <link rel="preload" as="image" href="/images/hero-reishi.jpg" />
+    <link rel="preload" as="image" href="reishi.webp" />
   </head>
 
   <body class="antialiased text-stone bg-cream">
@@ -82,7 +82,7 @@
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex items-center justify-between py-4">
           <a href="#" class="flex items-center gap-3" aria-label="Página inicial — Gaia Cogumelos">
-            <img src="logo.png" alt="Logotipo da Gaia Cogumelos" class="h-10 w-auto" />
+            <img src="logo.webp" alt="Logotipo da Gaia Cogumelos" class="h-10 w-auto" />
             <span class="font-semibold tracking-wide text-lg text-stone">Gaia Cogumelos</span>
           </a>
 
@@ -143,7 +143,7 @@
           </div>
           <div>
             <figure class="relative overflow-hidden">
-              <img src="./reishi.png" alt="Detalhe de cogumelos Reishi desidratados" loading="lazy" class="w-full h-auto" />
+              <img src="./reishi.webp" alt="Detalhe de cogumelos Reishi desidratados" loading="lazy" class="w-full h-auto" />
             </figure>
           </div>
         </div>
@@ -270,7 +270,7 @@
           <div>
             <div class="flex items-center gap-3">
               <div class="bg-cream p-px rounded-full">
-                <img src="./logo.png" alt="logo" width="36" height="36"/>
+                <img src="./logo.webp" alt="logo" width="36" height="36"/>
               </div>
               <span class="font-semibold tracking-wide text-lg">Gaia Cogumelos</span>
             </div>
@@ -316,8 +316,8 @@
       "name": "Gaia Cogumelos",
       "description": "Fornecimento B2B de Ganoderma lucidum (Reishi) desidratado e em pó",
       "url": "https://www.gaiacogumelos.com.br",
-      "logo": "https://www.gaiacogumelos.com.br/logo.png",
-      "image": "https://www.gaiacogumelos.com.br/og-image.jpg",
+      "logo": "https://www.gaiacogumelos.com.br/logo.webp",
+      "image": "https://www.gaiacogumelos.com.br/gaia-logo-full.webp",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+55-00-0000-0000",
