incluir robottxt e sitemap

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Gaia Cogumelos | Fornecimento B2B de Ganoderma lucidum desidratado e em pó</title>
     <meta name="description" content="Gaia Cogumelos fornece matéria-prima B2B de Ganoderma lucidum (Reishi) desidratado e em pó, com rastreabilidade e padrão de qualidade consistente para indústrias de suplementos e extratos." />
     <link rel="canonical" href="https://www.gaiacogumelos.com.br/" />
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+    <link rel="robots" href="/robots.txt" />
     
     <!-- SEO Keywords -->
     <meta name="keywords" content="ganoderma lucidum, reishi, cogumelos medicinais, fornecimento B2B, matéria prima, suplementos, extratos, nutracêuticos, cogumelos desidratados, pó de reishi, Bariri, São Paulo" />
