--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
           <div class="hidden md:flex items-center gap-3">
             <a href="#contato" class="inline-flex items-center justify-center rounded-xl border border-leaf/20 bg-white px-4 py-2 text-sm font-semibold text-forest shadow-soft hover:shadow transition">Fale com o comercial</a>
-            <a href="#cotacao" class="inline-flex items-center justify-center rounded-xl bg-forest px-4 py-2 text-sm font-semibold text-white hover:bg-leaf shadow-soft">Solicitar cotação</a>
+            <a href="#contato" class="inline-flex items-center justify-center rounded-xl bg-forest px-4 py-2 text-sm font-semibold text-white hover:bg-leaf shadow-soft">Solicitar cotação</a>
           </div>
 
           <button id="btnMenu"
@@ -122,7 +122,7 @@
         <a href="#contato" class="px-3 py-2 rounded-lg hover:bg-black/5">Contato</a>
         <div class="pt-2 flex gap-2">
           <a href="#contato" class="whitespace-nowrap flex-1 inline-flex items-center justify-center rounded-xl border border-brand-leaf/20 bg-white px-4 py-2 text-sm font-semibold text-brand-forest">Fale com o comercial</a>
-          <a href="#cotacao" class="flex-1 inline-flex items-center justify-center rounded-xl bg-brand-forest px-4 py-2 text-sm font-semibold text-white">Solicitar cotação</a>
+          <a href="#contato" class="flex-1 inline-flex items-center justify-center rounded-xl bg-brand-forest px-4 py-2 text-sm font-semibold text-white">Solicitar cotação</a>
         </div>
       </nav>
     </div>
@@ -139,7 +139,7 @@
               Fornecemos <strong>Reishi desidratado e em pó</strong> com padrão de qualidade consistente, do cultivo à expedição. Parceria B2B para indústrias de suplementos, extratos e nutracêuticos.
             </p>
             <div class="mt-8 flex flex-col sm:flex-row gap-3">
-              <a href="#cotacao" class="inline-flex items-center justify-center rounded-xl bg-forest px-5 py-3 text-base font-semibold text-white hover:bg-leaf shadow-soft">Solicitar cotação</a>
+              <a href="#contato" class="inline-flex items-center justify-center rounded-xl bg-forest px-5 py-3 text-base font-semibold text-white hover:bg-leaf shadow-soft">Solicitar cotação</a>
               <a href="#sobre" class="inline-flex items-center justify-center rounded-xl border border-leaf/20 bg-white px-5 py-3 text-base font-semibold text-forest hover:shadow-soft">Conheça a Gaia</a>
             </div>
           </div>
