Incluir produto brasileiro

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               Matéria-prima confiável de <span class="text-forest">Ganoderma lucidum</span> para sua marca
             </h1>
             <p class="mt-5 text-lg text-stone/80 max-w-2xl">
-              Fornecemos <strong>Reishi desidratado e em pó</strong> com padrão de qualidade consistente, do cultivo à expedição. Parceria B2B para indústrias de suplementos, extratos e nutracêuticos.
+              Fornecemos <strong>Reishi desidratado e em pó</strong> com padrão de qualidade consistente, do cultivo à expedição. Parceria B2B para indústrias de suplementos, extratos e nutracêuticos. <br/> Produto 100% brasileiro.
             </p>
             <div class="mt-8 flex flex-col sm:flex-row gap-3">
               <a href="#contato" class="inline-flex items-center justify-center rounded-xl bg-forest px-5 py-3 text-base font-semibold text-white hover:bg-leaf shadow-soft">Solicitar cotação</a>
@@ -211,6 +211,10 @@
           <div>
             <h2 class="text-2xl sm:text-3xl font-bold text-stone">Sobre a Gaia Cogumelos</h2>
             <p class="mt-4 text-stone/80">Produtor especializado em Ganoderma lucidum com foco em fornecimento B2B. Operação baseada em processos e relacionamentos de longo prazo com marcas que valorizam qualidade.</p>
+            <div class="mt-4 inline-flex items-center gap-2 bg-forest/10 text-forest px-3 py-2 rounded-lg text-sm font-medium">
+              <span class="text-lg">🇧🇷</span>
+              Produto 100% brasileiro
+            </div>
           </div>
           <div class="rounded-3xl bg-white p-6 border border-black/5 shadow-soft">
             <dl class="grid grid-cols-2 gap-4">
