--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' https:; connect-src 'self';" />
 
     <!-- Favicon -->
-    <link rel="icon" href="logo.webp" />
-    <link rel="apple-touch-icon" href="logo.webp" />
-    <link rel="shortcut icon" type="image/webp" href="logo.webp" />
-
+    <link rel="icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    
     <!-- JSON-LD Structured Data -->
     <link rel="alternate" type="application/ld+json" href="/schema-po-reishi.json" />
     <link rel="alternate" type="application/ld+json" href="/schema-reishi-desidratado.json" />
